css/style.css
body{
    background-color: #dce1e9;
    color: 250;
    margin: 0;
}

header{
    background-color: #c5c5c5;
}

header a{
    text-decoration: none;
    color: #353535;
}

.container{
    width: 80%;
    margin: auto;
    overflow: hidden;
}

#navbar{
    background: #363732;
    color: #fff;
}

#navbar ul{
    padding: 0;
    list-style: none;
}

#navbar li{
    display: inline;
}

.btn-nav{
    padding: 10px;
    border: 2px #808080 solid;
    color: #808080;    
    font-size: 18px;
    align-content: center;    
    text-decoration: none;
}

.btn-current-page{
    padding: 10px;
    border: 2px #ccc solid;
    color: #ccc;
    font-size: 18px;
    align-content: center;
    text-decoration: none;
}

#main-footer{
    background: #363732;;
    color: #fff;
    text-align: center;
    padding: 10px;
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
}

.chart-title{
    text-align: center;
}

.chart-bar .ct-bar{
    stroke-width: 25px
}

#parameters-panel{
    border: 1px #353535 solid;
    margin: 10px 10px;
    padding: 10px;
}

.section-chart{
    width: 800px;
    float: left;
    border: 1px #353535 solid;
    padding: 10px;
    margin: 10px;
}


#main-grid-container {
  display: grid;
  grid-template-columns: 250px auto;
  grid-template-rows: 200px 200px 200px 200px;
  justify-content: space-start;
  align-content: center;
  grid-template-areas:
    'left main'
    'left main'
    'left main'
    'left main'
    'left main';
}

#parameters-panel { grid-area: left; }
#charts-container { grid-area: main; }

#parameters-panel{
    display: grid;
}

@media screen and (max-width: 1100px){
    #main-grid-container {
        display: grid;
        grid-template-columns: 840px;
        grid-template-rows: auto auto;
        grid-template-areas:
          'left '
          'main';
        padding: 10px;
      }

    #parameters-panel{
        display: grid;
        grid-template-columns: auto auto auto;
        grid-template-rows: 40px auto auto auto;
        grid-template-areas:
            'title title title'
            'rooms cities1 cities2'
            'condition cities1 cities2'
            'submit submit submit'
    }

    #filters-title { grid-area: title }
    #filters-rooms-no { grid-area: rooms }
    #filters-condition { grid-area: condition }
    #filters-cities-1 { grid-area: cities1 }
    #filters-cities-2 { grid-area: cities2 }
    #filters-apply { grid-area: submit }    
}

